# Cpp-Copilot-VSC-Demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: Calculator.h  CalculatorUI.cpp  CalculatorUI.h  calculator.cpp  main.cpp  main.h  test_calculator.cpp  test_main.cpp  user.cpp  user.h
